--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.10",
+    "@prisma/client": "4.4.0",
     "next": "12.3.1",
+    "next-auth": "^4.12.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -19,6 +22,7 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "prisma": "4.4.0",
     "typescript": "4.8.4"
   }
 }
