--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/react": "^1.0.0-beta.10",
+    "@emotion/react": "^11.10.0",
+    "@emotion/server": "^11.10.0",
+    "@mantine/core": "5.1.0",
+    "@mantine/hooks": "5.1.0",
+    "@mantine/next": "5.1.0",
     "@prisma/client": "4.4.0",
     "next": "12.3.1",
     "next-auth": "^4.12.2",
