--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/hooks": "5.1.0",
     "@mantine/next": "5.1.0",
     "@prisma/client": "4.4.0",
+    "@tabler/icons": "^1.101.0",
     "next": "12.3.1",
     "next-auth": "^4.12.2",
     "react": "18.2.0",
