--- a/package.json
+++ b/package.json
@@ -16,10 +16,16 @@
     "@mantine/next": "5.1.0",
     "@prisma/client": "4.4.0",
     "@tabler/icons": "^1.101.0",
+    "@tanstack/react-query": "^4.10.1",
+    "@trpc/client": "^10.0.0-proxy-beta.15",
+    "@trpc/next": "^10.0.0-proxy-beta.15",
+    "@trpc/react": "^10.0.0-proxy-beta.15",
+    "@trpc/server": "^10.0.0-proxy-beta.15",
     "next": "12.3.1",
     "next-auth": "^4.12.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@types/node": "18.8.2",
