--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@trpc/next": "^10.0.0-proxy-beta.15",
     "@trpc/react": "^10.0.0-proxy-beta.15",
     "@trpc/server": "^10.0.0-proxy-beta.15",
+    "date-fns": "^2.29.3",
     "next": "12.3.1",
     "next-auth": "^4.12.2",
     "react": "18.2.0",
