--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/core": "5.1.0",
     "@mantine/hooks": "5.1.0",
     "@mantine/next": "5.1.0",
+    "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "4.4.0",
     "@tabler/icons": "^1.101.0",
     "@tanstack/react-query": "^4.10.1",
