--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.0",
     "@emotion/server": "^11.10.0",
     "@mantine/core": "5.1.0",
+    "@mantine/form": "^5.5.4",
     "@mantine/hooks": "5.1.0",
     "@mantine/next": "5.1.0",
     "@next-auth/prisma-adapter": "^1.0.4",
