--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next-auth": "^4.12.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "superjson": "^1.10.1",
     "zod": "^3.19.1"
   },
   "devDependencies": {
