--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@types/node": "18.8.2",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "prisma": "4.4.0",
