--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@mantine/hooks": "5.1.0",
     "@mantine/next": "5.1.0",
     "@next-auth/prisma-adapter": "^1.0.4",
-    "@prisma/client": "4.4.0",
+    "@prisma/client": "^4.5.0",
     "@tabler/icons": "^1.101.0",
     "@tanstack/react-query": "^4.10.1",
     "@trpc/client": "^10.0.0-proxy-beta.15",
@@ -39,7 +39,7 @@
     "@typescript-eslint/parser": "^5.40.1",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
-    "prisma": "4.4.0",
+    "prisma": "^4.5.0",
     "typescript": "4.8.4"
   }
 }
