--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/form": "^5.5.4",
     "@mantine/hooks": "5.1.0",
     "@mantine/next": "5.1.0",
+    "@mantine/prism": "^5.6.2",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.5.0",
     "@tabler/icons": "^1.101.0",
@@ -29,6 +30,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "^1.10.1",
+    "typewriter-effect": "^2.19.0",
     "zod": "^3.19.1"
   },
   "devDependencies": {
