--- a/package.json
+++ b/package.json
@@ -11,36 +11,37 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/server": "^11.10.0",
-    "@mantine/core": "5.1.0",
+    "@mantine/core": "5.6.2",
     "@mantine/form": "^5.5.4",
-    "@mantine/hooks": "5.1.0",
-    "@mantine/next": "5.1.0",
-    "@mantine/prism": "^5.6.2",
+    "@mantine/hooks": "5.6.2",
+    "@mantine/next": "5.6.2",
     "@next-auth/prisma-adapter": "^1.0.4",
+    "@nivo/core": "^0.80.0",
+    "@nivo/pie": "^0.80.0",
     "@prisma/client": "^4.5.0",
     "@tabler/icons": "^1.101.0",
-    "@tanstack/react-query": "^4.10.1",
-    "@trpc/client": "^10.0.0-proxy-beta.15",
-    "@trpc/next": "^10.0.0-proxy-beta.15",
-    "@trpc/react": "^10.0.0-proxy-beta.15",
-    "@trpc/server": "^10.0.0-proxy-beta.15",
+    "@tanstack/react-query": "^4.13.0",
+    "@trpc/client": "^10.0.0-rc.0",
+    "@trpc/next": "^10.0.0-rc.0",
+    "@trpc/react-query": "^10.0.0-rc.0",
+    "@trpc/server": "^10.0.0-rc.0",
     "date-fns": "^2.29.3",
-    "next": "12.3.1",
-    "next-auth": "^4.12.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.0.0",
+    "next-auth": "^4.15.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "superjson": "^1.10.1",
     "typewriter-effect": "^2.19.0",
     "zod": "^3.19.1"
   },
   "devDependencies": {
-    "@types/node": "18.8.2",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "18.0.6",
+    "@types/node": "18.11.5",
+    "@types/react": "18.0.22",
+    "@types/react-dom": "18.0.7",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
-    "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1",
+    "eslint": "8.26.0",
+    "eslint-config-next": "^13.0.0",
     "prisma": "^4.5.0",
     "typescript": "4.8.4"
   }
