implements bar chart to display number of tasks over time

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     "noImplicitAny": true,
     "noUnusedParameters": true,
     "useUnknownInCatchVariables": true,
-    "noUncheckedIndexedAccess": true,
+    "noUncheckedIndexedAccess": false,
     "useDefineForClassFields": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
