--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
     "@mantine/hooks": "5.6.2",
     "@mantine/next": "5.6.2",
     "@next-auth/prisma-adapter": "^1.0.4",
+    "@nivo/bar": "^0.80.0",
     "@nivo/core": "^0.80.0",
     "@nivo/pie": "^0.80.0",
     "@prisma/client": "^4.5.0",
     "@tabler/icons": "^1.101.0",
     "@tanstack/react-query": "^4.13.0",
-    "@trpc/client": "^10.0.0-rc.0",
-    "@trpc/next": "^10.0.0-rc.0",
-    "@trpc/react-query": "^10.0.0-rc.0",
-    "@trpc/server": "^10.0.0-rc.0",
+    "@trpc/client": "10.0.0-rc.2",
+    "@trpc/next": "10.0.0-rc.2",
+    "@trpc/react-query": "10.0.0-rc.2",
+    "@trpc/server": "10.0.0-rc.2",
     "date-fns": "^2.29.3",
     "next": "^13.0.0",
     "next-auth": "^4.15.0",
