--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@trpc/react-query": "10.0.0-rc.2",
     "@trpc/server": "10.0.0-rc.2",
     "date-fns": "^2.29.3",
+    "memory-cache": "^0.2.0",
     "next": "^13.0.0",
     "next-auth": "^4.15.0",
     "react": "^18.2.0",
@@ -36,6 +37,7 @@
     "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@types/memory-cache": "^0.2.2",
     "@types/node": "18.11.5",
     "@types/react": "18.0.22",
     "@types/react-dom": "18.0.7",
