--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "@trpc/next": "10.0.0-rc.2",
     "@trpc/react-query": "10.0.0-rc.2",
     "@trpc/server": "10.0.0-rc.2",
-    "chrome-aws-lambda": "^10.1.0",
+    "@vercel/og": "^0.0.20",
+    "chrome-aws-lambda": "^8.0.2",
     "date-fns": "^2.29.3",
     "memory-cache": "^0.2.0",
     "next": "^13.0.0",
     "next-auth": "^4.15.0",
-    "puppeteer-core": "^19.2.1",
+    "puppeteer-core": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "superjson": "^1.10.1",
